这两天做了16个页面，剩下个人中心和首页

--- a/src/scss/common/_fonts.scss
+++ b/src/scss/common/_fonts.scss
@@ -20,6 +20,9 @@ $fonts: (
         style: normal),
     'Poppins-Bold': (file: 'Poppins-Bold',
         weight: 700,
+        style: normal),
+    'Oswald': (file: 'Oswald-Regular',
+        weight: 700,
         style: normal)
 );
 
