--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -4,6 +4,10 @@
 @use 'news';
 @use 'contact';
 @use 'technology';
+@use 'about';
+@use 'solution';
+@use 'services';
+@use 'faq';
 @use 'mp';
 @use 'footer';
 
