--- a/src/scss/layout/_case.scss
+++ b/src/scss/layout/_case.scss
@@ -103,3 +103,50 @@
         }
     }
 }
+
+.case_d_1 {
+    height: 76vh;
+    display: flex;
+    background: linear-gradient(0deg, #b9cbe3, transparent);
+
+    .container {
+        align-items: center;
+    }
+
+    .s3_left {
+        display: flex;
+        height: 4.7rem;
+
+        img {
+            object-fit: cover;
+        }
+    }
+}
+
+.case_d_2 {
+    background-color: var(--f6);
+
+    .c_item {
+        height: 4.8rem;
+        padding: 0.1rem;
+        background: #fff;
+
+        .c_info {
+            height: 3rem;
+            margin-left: -0.1rem;
+            margin-right: 0.1rem;
+            width: calc(100% + 0.2rem);
+
+            .s {
+                @include ellipsis(3);
+                color: var(--6);
+            }
+        }
+
+        &:hover {
+            .s {
+                color: var(--f);
+            }
+        }
+    }
+}
