--- a/src/scss/layout/_nyBanner.scss
+++ b/src/scss/layout/_nyBanner.scss
@@ -10,10 +10,22 @@
     .l_title {
         padding-top: 1.6rem;
         height: calc(100% - 0.6rem);
+        padding-bottom: 0.3rem;
+
+        h1 {
+            line-height: 1.2;
+        }
 
         h1,
         p {
             color: var(--f);
+        }
+    }
+
+    .c_img {
+
+        img {
+            object-fit: cover;
         }
     }
 }
