--- a/src/scss/element/form/_upload_attachments_module.scss
+++ b/src/scss/element/form/_upload_attachments_module.scss
@@ -3,16 +3,19 @@
 .upload_attachments_module {
     .p_group {
         width: 100%;
-        background: #f6f7f8;
-        border: 1px solid #f6f7f8;
-        height: auto;
+        background-color: var(--bl);
+        border: 1px dashed var(--bc);
+        background-image: url(/src/images/img-86.png);
+        background-repeat: no-repeat;
+        background-position: right bottom;
+        height: 4.9rem;
         border-radius: 0.06rem;
-        display: grid;
         justify-content: space-between;
-        grid-template-columns: 1fr 1.2rem;
         align-items: center;
-        padding: 0.2rem;
         gap: 0.12rem;
+        display: flex;
+        flex-direction: column;
+        padding: 1.2rem 0.2rem 0.6rem;
 
         @media screen and (max-width:768px) {
             grid-template-columns: 1fr;
@@ -24,22 +27,26 @@
     }
 
     button {
-        max-width: 1.2rem;
         width: 100%;
-        height: 0.5rem;
         border-radius: 0.06rem;
         padding: 0 0.15rem;
-        background: #f6f7f8;
-        border: 1px solid #dfdfdf;
-        color: #666;
         cursor: pointer;
-        transition: all var(--ease) .3s;
+        background: none;
+        display: flex;
+        flex-direction: column;
+        gap: 0.2rem;
+        transition: all var(--ease) 0.3s;
 
         @media screen and (max-width:768px) {
             max-width: 100%;
         }
 
+        img {
+            height: 0.44rem;
+        }
+
         span {
+            color: var(--0);
             transition: all var(--ease) .3s;
         }
 
@@ -54,6 +61,14 @@
 
     .p_file_info {
         width: 100%;
+
+        p:first-child {
+            color: var(--0);
+        }
+
+        p:last-child {
+            color: var(--1);
+        }
     }
 
     .p_file_info>p {
@@ -63,15 +78,15 @@
 
     .p_fileName {
         align-items: center;
-        max-width: 2rem;
         width: 100%;
-        background-color: var(--f);
+        background-color: var(--f6);
         color: var(--6);
         padding: 0.1rem 0.15rem;
         padding-right: 0.26rem;
         border-radius: 0.06rem;
         display: none;
         position: relative;
+        margin-top: 0.14rem;
 
         .p_name {
             @include ellipsis(1);
@@ -79,8 +94,9 @@
 
         .p_close {
             position: absolute;
-            top: 0.04rem;
-            right: 0.04rem;
+            top: 50%;
+            right: 0.1rem;
+            transform: translateY(-50%);
             display: flex;
             cursor: pointer;
 
